--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
 .App {
   text-align: center;
+  font-family: "Rajdhani", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navBar {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 5px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: black;
+  height: 60px;
+}
+
+.subNav {
+  display: flex;
+  justify-content: space-around;
   align-items: center;
+  width: 400px;
+}
+
+.logo {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin-left: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.logoTitle {
+  margin-left: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home {
+  height: 500px;
+  background-image: url(./assets/food.jpeg);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sub_home {
+  margin-top: 70px;
+}
+
+.food_card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 50px;
+}
+
+.food_img {
+  clip-path: circle(50%);
+}
+
+.btn {
+  background-color: rgb(119, 238, 212);
+  height: 40px;
+  width: 120px;
+  border: 1px grey solid;
+  border-radius: 10px;
+}
+.recipes {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 20px;
+  margin-top: 40px;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.favCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.favTitle {
+  width: 200px;
+  height: 100px;
 }
